@@ -1,29 +1,38 @@
 package ca.uhn.fhir.jpa.starter;
 
 import ca.uhn.fhir.context.FhirVersionEnum;
-import ca.uhn.fhir.jpa.api.config.DaoConfig.ClientIdStrategyEnum;
+import ca.uhn.fhir.jpa.api.config.JpaStorageSettings.ClientIdStrategyEnum;
+import ca.uhn.fhir.jpa.api.config.JpaStorageSettings.IdStrategyEnum;
 import ca.uhn.fhir.jpa.model.entity.NormalizedQuantitySearchLevel;
+import ca.uhn.fhir.jpa.packages.PackageInstallationSpec;
 import ca.uhn.fhir.rest.api.EncodingEnum;
-import com.google.common.collect.ImmutableList;
 import org.hl7.fhir.r4.model.Bundle;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
 import org.springframework.context.annotation.Configuration;
 
 import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 
 @ConfigurationProperties(prefix = "hapi.fhir")
 @Configuration
 @EnableConfigurationProperties
 public class AppProperties {
 
+	private final Set<String> auto_version_reference_at_paths = new HashSet<>();
+	private final Set<String> local_base_urls = new HashSet<>();
+	private final Set<String> logical_urls = new HashSet<>();
+	private final List<String> custom_interceptor_classes = new ArrayList<>();
+	private final List<String> custom_provider_classes = new ArrayList<>();
   private Boolean cr_enabled = false;
   private Boolean ips_enabled = false;
   private Boolean openapi_enabled = false;
   private Boolean mdm_enabled = false;
+	private String mdm_rules_json_location = "mdm-rules.json";
   private boolean advanced_lucene_indexing = false;
   private boolean enable_index_of_type = false;
   private Boolean allow_cascading_deletes = false;
@@ -32,6 +41,8 @@ public class AppProperties {
   private Boolean allow_multiple_delete = false;
   private Boolean allow_override_default_search_params = true;
   private Boolean auto_create_placeholder_reference_targets = false;
+	private Boolean mass_ingestion_mode_enabled = false;
+	private Boolean language_search_parameter_enabled = false;
   private Boolean dao_scheduling_enabled = true;
   private Boolean delete_expunge_enabled = false;
   private Boolean enable_index_missing_fields = false;
@@ -60,44 +71,46 @@ public class AppProperties {
   private EncodingEnum default_encoding = EncodingEnum.JSON;
   private FhirVersionEnum fhir_version = FhirVersionEnum.R4;
   private ClientIdStrategyEnum client_id_strategy = ClientIdStrategyEnum.ALPHANUMERIC;
+	private IdStrategyEnum server_id_strategy = null;
   private List<String> supported_resource_types = new ArrayList<>();
   private List<Bundle.BundleType> allowed_bundle_types = null;
   private Boolean narrative_enabled = true;
-
+	private Boolean ig_runtime_upload_enabled = false;
   private Validation validation = new Validation();
   private Map<String, Tester> tester = null;
   private Logger logger = new Logger();
   private Subscription subscription = new Subscription();
   private Cors cors = null;
   private Partitioning partitioning = null;
+	private Boolean validate_resource_status_for_package_upload = true;
   private Boolean install_transitive_ig_dependencies = true;
-  private Map<String, ImplementationGuide> implementationGuides = null;
+	private Map<String, PackageInstallationSpec> implementationGuides = null;
 
-  private String staticLocation = null;
-
+	private String custom_content_path = null;
+	private String app_content_path = null;
   private Boolean lastn_enabled = false;
   private boolean store_resource_in_lucene_index_enabled = false;
-  private NormalizedQuantitySearchLevel normalized_quantity_search_level = NormalizedQuantitySearchLevel.NORMALIZED_QUANTITY_SEARCH_NOT_SUPPORTED;
+	private NormalizedQuantitySearchLevel normalized_quantity_search_level =
+			NormalizedQuantitySearchLevel.NORMALIZED_QUANTITY_SEARCH_NOT_SUPPORTED;
 
   private Boolean use_apache_address_strategy = false;
   private Boolean use_apache_address_strategy_https = false;
 
   private Integer bundle_batch_pool_size = 20;
   private Integer bundle_batch_pool_max_size = 100;
-  private final List<String> local_base_urls = new ArrayList<>();
+	private Boolean resource_dbhistory_enabled = true;
+	private Boolean upliftedRefchains_enabled = false;
 
-  private final List<String> custom_interceptor_classes = new ArrayList<>();
+	private boolean userRequestRetryVersionConflictsInterceptorEnabled = false;
+	private List<Integer> search_prefetch_thresholds = new ArrayList<>();
 
   public List<String> getCustomInterceptorClasses() {
     return custom_interceptor_classes;
   }
 
-  public String getStaticLocation() {
-    return staticLocation;
-  }
+	public List<String> getCustomProviderClasses() {
+		return custom_provider_classes;
 
-  public void setStaticLocation(String staticLocation) {
-    this.staticLocation = staticLocation;
   }
 
   public Boolean getOpenapi_enabled() {
@@ -132,11 +145,11 @@ public class AppProperties {
     this.defer_indexing_for_codesystems_of_size = defer_indexing_for_codesystems_of_size;
   }
 
-  public Map<String, ImplementationGuide> getImplementationGuides() {
+	public Map<String, PackageInstallationSpec> getImplementationGuides() {
     return implementationGuides;
   }
 
-  public void setImplementationGuides(Map<String, ImplementationGuide> implementationGuides) {
+	public void setImplementationGuides(Map<String, PackageInstallationSpec> implementationGuides) {
     this.implementationGuides = implementationGuides;
   }
 
@@ -172,6 +185,12 @@ public class AppProperties {
     this.mdm_enabled = mdm_enabled;
   }
 
+	public String getMdm_rules_json_location() {
+		return mdm_rules_json_location;
+	}
+	public void setMdm_rules_json_location(String mdm_rules_json_location) {
+		this.mdm_rules_json_location = mdm_rules_json_location;
+	}
   public Cors getCors() {
     return cors;
   }
@@ -208,16 +227,16 @@ public class AppProperties {
     return subscription;
   }
 
+	public void setSubscription(Subscription subscription) {
+		this.subscription = subscription;
+	}
   public Boolean getDefault_pretty_print() {
     return default_pretty_print;
   }
 
   public void setDefault_pretty_print(Boolean default_pretty_print) {
     this.default_pretty_print = default_pretty_print;
-  }
 
-  public void setSubscription(Subscription subscription) {
-    this.subscription = subscription;
   }
 
   public Validation getValidation() {
@@ -248,9 +267,14 @@ public class AppProperties {
     return client_id_strategy;
   }
 
-  public void setClient_id_strategy(
-      ClientIdStrategyEnum client_id_strategy) {
+	public void setClient_id_strategy(ClientIdStrategyEnum client_id_strategy) {
     this.client_id_strategy = client_id_strategy;
+	}
+	public IdStrategyEnum getServer_id_strategy() {
+		return server_id_strategy;
+	}
+	public void setServer_id_strategy(IdStrategyEnum server_id_strategy) {
+		this.server_id_strategy = server_id_strategy;
   }
 
   public boolean getAdvanced_lucene_indexing() {
@@ -297,18 +321,25 @@ public class AppProperties {
     return allow_override_default_search_params;
   }
 
-  public void setAllow_override_default_search_params(
-      Boolean allow_override_default_search_params) {
+	public void setAllow_override_default_search_params(Boolean allow_override_default_search_params) {
     this.allow_override_default_search_params = allow_override_default_search_params;
   }
 
+	public Boolean getMass_ingestion_mode_enabled() {
+		return mass_ingestion_mode_enabled;
+	}
+	public void setMass_ingestion_mode_enabled(Boolean mass_ingestion_mode_enabled) {
+		this.mass_ingestion_mode_enabled = mass_ingestion_mode_enabled;
+	}
   public Boolean getAuto_create_placeholder_reference_targets() {
     return auto_create_placeholder_reference_targets;
   }
 
-  public void setAuto_create_placeholder_reference_targets(
-      Boolean auto_create_placeholder_reference_targets) {
+	public void setAuto_create_placeholder_reference_targets(Boolean auto_create_placeholder_reference_targets) {
     this.auto_create_placeholder_reference_targets = auto_create_placeholder_reference_targets;
+	}
+	public Set<String> getAuto_version_reference_at_paths() {
+		return auto_version_reference_at_paths;
   }
 
   public Integer getDefault_page_size() {
@@ -363,8 +394,7 @@ public class AppProperties {
     return enforce_referential_integrity_on_delete;
   }
 
-  public void setEnforce_referential_integrity_on_delete(
-      Boolean enforce_referential_integrity_on_delete) {
+	public void setEnforce_referential_integrity_on_delete(Boolean enforce_referential_integrity_on_delete) {
     this.enforce_referential_integrity_on_delete = enforce_referential_integrity_on_delete;
   }
 
@@ -372,8 +402,7 @@ public class AppProperties {
     return enforce_referential_integrity_on_write;
   }
 
-  public void setEnforce_referential_integrity_on_write(
-      Boolean enforce_referential_integrity_on_write) {
+	public void setEnforce_referential_integrity_on_write(Boolean enforce_referential_integrity_on_write) {
     this.enforce_referential_integrity_on_write = enforce_referential_integrity_on_write;
   }
 
@@ -549,6 +578,12 @@ public class AppProperties {
     this.install_transitive_ig_dependencies = install_transitive_ig_dependencies;
   }
 
+	public Boolean getValidate_resource_status_for_package_upload() {
+		return validate_resource_status_for_package_upload;
+	}
+	public void setValidate_resource_status_for_package_upload(Boolean validate_resource_status_for_package_upload) {
+		this.validate_resource_status_for_package_upload = validate_resource_status_for_package_upload;
+	}
   public Integer getBundle_batch_pool_size() {
     return this.bundle_batch_pool_size;
   }
@@ -565,13 +600,71 @@ public class AppProperties {
     this.bundle_batch_pool_max_size = bundle_batch_pool_max_size;
   }
 
-  public List<String> getLocal_base_urls() {
+	public Set<String> getLocal_base_urls() {
     return local_base_urls;
   }
 
+	public Set<String> getLogical_urls() {
+		return logical_urls;
+	}
+	public Boolean getIg_runtime_upload_enabled() {
+		return ig_runtime_upload_enabled;
+	}
+	public void setIg_runtime_upload_enabled(Boolean ig_runtime_upload_enabled) {
+		this.ig_runtime_upload_enabled = ig_runtime_upload_enabled;
+	}
+	public String getCustom_content_path() {
+		return custom_content_path;
+	}
+	public void setCustom_content_path(String custom_content_path) {
+		this.custom_content_path = custom_content_path;
+	}
+	public String getApp_content_path() {
+		return app_content_path;
+	}
+	public void setApp_content_path(String app_content_path) {
+		this.app_content_path = app_content_path;
+	}
+	public Boolean getLanguage_search_parameter_enabled() {
+		return language_search_parameter_enabled;
+	}
+	public void setLanguage_search_parameter_enabled(Boolean language_search_parameter_enabled) {
+		this.language_search_parameter_enabled = language_search_parameter_enabled;
+	}
+	public List<Integer> getSearch_prefetch_thresholds() {
+		return this.search_prefetch_thresholds;
+	}
+	public void setSearch_prefetch_thresholds(List<Integer> thePrefetchThresholds) {
+		this.search_prefetch_thresholds = thePrefetchThresholds;
+	}
+	public boolean getUpliftedRefchains_enabled() {
+		return upliftedRefchains_enabled;
+	}
+	public void setUpliftedRefchains_enabled(boolean upliftedRefchains_enabled) {
+		this.upliftedRefchains_enabled = upliftedRefchains_enabled;
+	}
+	public Boolean getUserRequestRetryVersionConflictsInterceptorEnabled() {
+		return userRequestRetryVersionConflictsInterceptorEnabled;
+	}
+	public void setUserRequestRetryVersionConflictsInterceptorEnabled(
+			Boolean userRequestRetryVersionConflictsInterceptorEnabled) {
+		this.userRequestRetryVersionConflictsInterceptorEnabled = userRequestRetryVersionConflictsInterceptorEnabled;
+	}
+	public boolean getEnable_index_of_type() {
+		return enable_index_of_type;
+	}
+	public void setEnable_index_of_type(boolean enable_index_of_type) {
+		this.enable_index_of_type = enable_index_of_type;
+	}
+	public Boolean getResource_dbhistory_enabled() {
+		return resource_dbhistory_enabled;
+	}
+	public void setResource_dbhistory_enabled(Boolean resource_dbhistory_enabled) {
+		this.resource_dbhistory_enabled = resource_dbhistory_enabled;
+	}
   public static class Cors {
     private Boolean allow_Credentials = true;
-    private List<String> allowed_origin = ImmutableList.of("*");
+		private List<String> allowed_origin = List.of("*");
 
     public List<String> getAllowed_origin() {
       return allowed_origin;
@@ -595,7 +688,8 @@ public class AppProperties {
 
     private String name = "fhirtest.access";
     private String error_format = "ERROR - ${requestVerb} ${requestUrl}";
-    private String format = "Path[${servletPath}] Source[${requestHeader.x-forwarded-for}] Operation[${operationType} ${operationName} ${idOrResourceName}] UA[${requestHeader.user-agent}] Params[${requestParameters}] ResponseEncoding[${responseEncodingNoDefault}] Operation[${operationType} ${operationName} ${idOrResourceName}] UA[${requestHeader.user-agent}] Params[${requestParameters}] ResponseEncoding[${responseEncodingNoDefault}]";
+		private String format =
+				"Path[${servletPath}] Source[${requestHeader.x-forwarded-for}] Operation[${operationType} ${operationName} ${idOrResourceName}] UA[${requestHeader.user-agent}] Params[${requestParameters}] ResponseEncoding[${responseEncodingNoDefault}] Operation[${operationType} ${operationName} ${idOrResourceName}] UA[${requestHeader.user-agent}] Params[${requestParameters}] ResponseEncoding[${responseEncodingNoDefault}]";
     private Boolean log_exceptions = true;
 
     public String getName() {
@@ -671,36 +765,6 @@ public class AppProperties {
     }
   }
 
-  public static class ImplementationGuide {
-    private String url;
-    private String name;
-    private String version;
-
-    public String getUrl() {
-      return url;
-    }
-
-    public void setUrl(String url) {
-      this.url = url;
-    }
-
-    public String getName() {
-      return name;
-    }
-
-    public void setName(String name) {
-      this.name = name;
-    }
-
-    public String getVersion() {
-      return version;
-    }
-
-    public void setVersion(String version) {
-      this.version = version;
-    }
-  }
-
   public static class Validation {
 
     private Boolean requests_enabled = false;
@@ -727,6 +791,32 @@ public class AppProperties {
 
     private Boolean partitioning_include_in_search_hashes = false;
     private Boolean allow_references_across_partitions = false;
+		private Boolean conditional_create_duplicate_identifiers_enabled = false;
+		private Boolean database_partition_mode_enabled = false;
+		private Boolean patient_id_partitioning_mode = false;
+		private Integer default_partition_id = 0;
+		private boolean request_tenant_partitioning_mode;
+		public boolean isRequest_tenant_partitioning_mode() {
+			return request_tenant_partitioning_mode;
+		}
+		public Integer getDefault_partition_id() {
+			return default_partition_id;
+		}
+		public void setDefault_partition_id(Integer theDefault_partition_id) {
+			default_partition_id = theDefault_partition_id;
+		}
+		public Boolean getDatabase_partition_mode_enabled() {
+			return database_partition_mode_enabled;
+		}
+		public void setDatabase_partition_mode_enabled(Boolean theDatabase_partition_mode_enabled) {
+			database_partition_mode_enabled = theDatabase_partition_mode_enabled;
+		}
+		public Boolean getPatient_id_partitioning_mode() {
+			return patient_id_partitioning_mode;
+		}
+		public void setPatient_id_partitioning_mode(Boolean thePatient_id_partitioning_mode) {
+			patient_id_partitioning_mode = thePatient_id_partitioning_mode;
+		}
 
     public Boolean getPartitioning_include_in_search_hashes() {
       return partitioning_include_in_search_hashes;
@@ -743,9 +833,25 @@ public class AppProperties {
     public void setAllow_references_across_partitions(Boolean allow_references_across_partitions) {
       this.allow_references_across_partitions = allow_references_across_partitions;
     }
+		public Boolean getConditional_create_duplicate_identifiers_enabled() {
+			return conditional_create_duplicate_identifiers_enabled;
   }
 
+		public void setConditional_create_duplicate_identifiers_enabled(
+				Boolean conditional_create_duplicate_identifiers_enabled) {
+			this.conditional_create_duplicate_identifiers_enabled = conditional_create_duplicate_identifiers_enabled;
+		}
+		public boolean getRequest_tenant_partitioning_mode() {
+			return request_tenant_partitioning_mode;
+		}
+		public void setRequest_tenant_partitioning_mode(boolean theRequest_tenant_partitioning_mode) {
+			request_tenant_partitioning_mode = theRequest_tenant_partitioning_mode;
+		}
+	}
   public static class Subscription {
+		private Boolean resthook_enabled = false;
+		private Boolean websocket_enabled = false;
+		private Email email = null;
 
     public Boolean getResthook_enabled() {
       return resthook_enabled;
@@ -763,9 +869,6 @@ public class AppProperties {
       this.websocket_enabled = websocket_enabled;
     }
 
-    private Boolean resthook_enabled = false;
-    private Boolean websocket_enabled = false;
-    private Email email = null;
 
     public Email getEmail() {
       return email;
@@ -776,6 +879,15 @@ public class AppProperties {
     }
 
     public static class Email {
+			private String from;
+			private String host;
+			private Integer port = 25;
+			private String username;
+			private String password;
+			private Boolean auth = false;
+			private Boolean startTlsEnable = false;
+			private Boolean startTlsRequired = false;
+			private Boolean quitWait = false;
       public String getFrom() {
         return from;
       }
@@ -848,23 +960,8 @@ public class AppProperties {
         this.quitWait = quitWait;
       }
 
-      private String from;
-      private String host;
-      private Integer port = 25;
-      private String username;
-      private String password;
-      private Boolean auth = false;
-      private Boolean startTlsEnable = false;
-      private Boolean startTlsRequired = false;
-      private Boolean quitWait = false;
-    }
   }
 
-  public boolean getEnable_index_of_type() {
-    return enable_index_of_type;
   }
 
-  public void setEnable_index_of_type(boolean enable_index_of_type) {
-    this.enable_index_of_type = enable_index_of_type;
-  }
 }
